<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/calculatorbackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bill_please"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_amount"
        android:inputType="text"

        android:minHeight="48dp" />

    <TextView
        android:id="@+id/no_of_pax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/no_of_pax" />

    <EditText
        android:id="@+id/no_of_pax_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_no_of_pax"
        android:inputType="text"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/svs_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs"/>

        <ToggleButton
            android:id="@+id/gst_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="true"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">


            <TextView
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/discount" />

            <EditText
                android:id="@+id/discount_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_the_discount"
                android:inputType="text"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/cash_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash" />

                    <RadioButton
                        android:id="@+id/paynow_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paynow" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/split_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/split" />

                    <Button
                        android:id="@+id/reset_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reset" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/total_bill_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_bill" />

                    <TextView
                        android:id="@+id/pay_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/each_person_has_to_pay" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
</LinearLayout>